fix compat filter select on mobile (bug 1077129)

--- a/src/media/css/compat-filtering.styl
+++ b/src/media/css/compat-filtering.styl
@@ -10,7 +10,7 @@
 
     select {
         font-size: 13px;
-        min-width: 180px;
+        min-width: 209px;
         vertical-align: middle;
     }
     label {
@@ -18,9 +18,11 @@
         display: inline-block;
         font-size: 12px;
         font-weight: 400;
-        line-height: 18px;
+        line-height: $pretty-select-height;
         margin-right: 5px;
+        text-align: right;
         vertical-align: middle;
+        width: 86px;
     }
 }
 
@@ -42,7 +44,9 @@
             right: 5px;
         }
         select {
-            padding-right: 75px;
+            background: #ccc;
+            color: #333;
+            padding: 8px;
         }
     }
 
@@ -87,6 +91,10 @@
     .compat-filter {
         right: 0;
         top: 0;
+
+        label {
+            line-height: 18px;
+        }
     }
     #search-results .expand-toggle {
         bottom: 0;
